--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ blinker # required by flask for tests
 dogpile.cache
 flask
 flask-wtf
-flask-oidc
+-e git+https://github.com/jontrossbach/flask-oidc.git#egg=flask-oidc
 Pillow
 python-fedora >= 0.3.33
 python-openid
